--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,31 +5,61 @@
     <!-- main -->
     <string name="activity_machine">Machine</string>
     <string name="activity_app_xbmc">XBMC</string>
-    <string name="activity_emu_psx">Arbex</string>
-    <string name="activity_emu_n64">Project64</string>
+	<string name="activity_emu_nes">Nintendo</string>
+    <string name="activity_emu_snes">Super Nintendo</string>
+    <string name="activity_emu_n64">Nintendo 64</string>
+	<string name="activity_emu_gba">GameBoy Advance</string>
+    <string name="activity_emu_psx">Playstation</string>
 
-    <!-- service -->
-    <string name="service_label">Machine</string>
-    <string name="service_started">XBMC</string>
-    <string name="service_stopped">Arbex</string>
 
     <!-- machine -->
     <string name="machine_reboot">Reboot Computer</string>
     <string name="machine_shutdown">Shutdown Computer</string>
     <string name="machine_suspend">Suspend Computer</string>
     <string name="machine_hibernate">Hibernate</string>
+    <string name="machine_reload_config">Reload Server Config</string>
+    <string name="machine_restart_server">Restart Server</string>
 
     <!-- app_xbmc -->
     <string name="app_xbmc_launch">Launch XBMC</string>
     <string name="app_xbmc_fullscreen">Fullscreen</string>
 
+	<!-- emu_nes -->
+    <string name="emu_nes_fullscreen">Fullscreen</string>
+    <string name="emu_nes_loadstate">Load State</string>
+    <string name="emu_nes_savestate">Save State</string>
+    <string name="emu_nes_launch">Launch Nestopia...</string>
+    <string name="emu_nes_analog">Analog</string>
+    <string name="emu_nes_pause">Pause</string>
+	<string name="emu_nes_reset">Reset</string>
+    <string name="emu_nes_exit">Exit Nestopia</string>
+	
+	<!-- emu_snes -->
+    <string name="emu_snes_fullscreen">Fullscreen</string>
+    <string name="emu_snes_loadstate">Load State</string>
+	<string name="emu_snes_savestate">Save State</string>
+    <string name="emu_snes_launch">Launch Snes9x...</string>
+    <string name="emu_snes_pause">Pause</string>
+    <string name="emu_snes_reset">Reset</string>
+    <string name="emu_snes_screenshot">Screenshot</string>
+    <string name="emu_snes_exit">Exit Snes9x</string>
+	
+	<!-- emu_gba -->
+    <string name="emu_gba_fullscreen">Fullscreen</string>
+    <string name="emu_gba_loadstate">Load State</string>
+	<string name="emu_gba_savestate">Save State</string>
+    <string name="emu_gba_launch">Launch VBA-M...</string>
+    <string name="emu_gba_pause">Pause</string>
+    <string name="emu_gba_reset">Reset</string>
+    <string name="emu_gba_exit">Exit VBA-M</string>
+	
     <!-- emu_psx -->
     <string name="emu_psx_fullscreen">Fullscreen</string>
     <string name="emu_psx_load_state1">Load State 1</string>
     <string name="emu_psx_load_state2">Load State 2</string>
     <string name="emu_psx_save_state1">Save State 1</string>
     <string name="emu_psx_save_state2">Save State 2</string>
-    <string name="emu_psx_launch">Launch Arbex</string>
+    <string name="emu_psx_launch">Launch Arbex...</string>
     <string name="emu_psx_analog">Analog</string>
     <string name="emu_psx_pause">Pause</string>
     <string name="emu_psx_run">Run 2</string>
@@ -41,7 +71,7 @@
     <string name="emu_n64_state">Change State Index</string>
     <string name="emu_n64_load_state">Load State</string>
     <string name="emu_n64_save_state">Save State</string>
-    <string name="emu_n64_launch">Launch</string>
+    <string name="emu_n64_launch">Launch Project64...</string>
     <string name="emu_n64_soft_reset">Soft Reset</string>
     <string name="emu_n64_hard_reset">Hard Reset</string>
     <string name="emu_n64_pause">Pause</string>
